# awen

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/android/: Dockerfile  devcontainer.json
.devcontainer/linux/: Dockerfile  devcontainer.json
.devcontainer/wasm/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/actions/docker-image/: action.yml
.github/actions/get-vcpkg/: action.yml
.github/workflows/: android.yml  linux.yml  osx.yml  wasm.yml  windows.yml
android/: .gitignore  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/funnansoftware/awen/: AvenActivity.java
android/app/src/main/res/values/: strings.xml
app/: CMakeLists.txt
app/awen/: CMakeLists.txt  Main.qml  gpu_surface.h  gpu_surface_dawn.cpp  gpu_surface_metal.mm  gpu_surface_vulkan.cpp  main.cpp  shell.html
app/awen-pong/: Actions.ixx  CMakeLists.txt  Components.ixx  Constants.ixx  Module.ixx  main.cpp  shell.html
app/caerwyn/: CMakeLists.txt  main.cpp  shell.html
app/pong/: CMakeLists.txt  main.cpp
cmake/: awen-config.cmake.in
cmake/android/: toolchain.cmake
cmake/preset/: android.json  arm64-android.json  arm64-osx.json  binarydir.json  clang.json  condition-linux.json  condition-osx.json  condition-windows.json  debug.json  emscripten.json  gcc.json  msvc.json  ninja.json  platform-android.json  platform-linux.json  platform-osx.json  platform-wasm.json  platform-windows.json  release.json  vcpkg.json  visualstudio.json  wasm32-emscripten.json  x64-osx.json
cmake/preset/compiler/: android-ndk.json  clang.json  emcc.json  gcc.json  mingw-gcc.json  msvc.json  visualstudio.json
cmake/preset/host/: arm64-linux.json  arm64-osx.json  x64-linux.json  x64-osx.json  x64-windows.json
cmake/preset/platform/: android.json  linux.json  osx.json  wasm.json  windows.json
cmake/vcpkg/ports/raylib/: fix-web-mouse-coords.patch  portfile.cmake  vcpkg.json
cmake/vcpkg/ports/skia/: portfile.cmake
cmake/vcpkg/triplets/: arm64-android-release.cmake  wasm32-emscripten-release.cmake  x64-android-release.cmake
include/awen/flecs/: Flecs.hpp
src/: CMakeLists.txt
src/awen/: CMakeLists.txt
src/awen/core/: CMakeLists.txt  TimerFixed.cpp  TimerFixed.hpp
src/awen/core/test/: CMakeLists.txt  TimerFixed.test.cpp  main.cpp
src/awen/entity/: CMakeLists.txt  Entity.h
src/awen/test/: Test.hpp
src/core/: Awen.ixx  CMakeLists.txt  Core.ixx  Engine.ixx  EnumMask.ixx  Event.ixx  Flecs.hpp  Module.ixx  Object.ixx  ObjectPtr.ixx  Overloaded.ixx  Signal.ixx
src/core-ecs/: CMakeLists.txt  Engine.ixx  Module.ixx  Phases.ixx
src/core/test/: Awen.test.cpp  CMakeLists.txt  Engine.test.cpp  Object.test.cpp  ObjectPtr.test.cpp  Signal.test.cpp
src/ecs/: CMakeLists.txt  Ecs.cpp  Ecs.ixx
src/engine/: CMakeLists.txt  Engine.ixx
src/flecs/: CMakeLists.txt
src/flecs/include/awen/: flecs.h
src/graphics/: CMakeLists.txt  Color.ixx  DrawComponents.ixx  DrawList.ixx  Event.ixx  Graphics.ixx  Renderer.ixx  SceneNodes.ixx  TextureCache.ixx  TextureId.ixx  TraversalPass.ixx  Window.ixx
src/graphics-ecs/: CMakeLists.txt  Color.ixx  Components.ixx  Module.ixx
src/graphics/test/: CMakeLists.txt  TraversalPass.test.cpp
src/raylib/: CMakeLists.txt  Camera.ixx  Color.ixx  Events.ixx  Module.ixx  Node.ixx  Rectangle.ixx  Ring.ixx  Text.ixx  TriangleStrip.ixx  Window.ixx
src/raylib/test/: CMakeLists.txt  Color.test.cpp  Events.test.cpp  Node.test.cpp  Window.test.cpp
src/scene/: CMakeLists.txt  HierarchyPool.ixx  NodeId.ixx  NodePool.ixx  Scene.ixx  SceneNodes.ixx  TextureCache.ixx  TextureId.ixx  Transform.ixx  TraversalPass.ixx
src/scene/test/: CMakeLists.txt  HierarchyPool.test.cpp  NodePool.test.cpp  Scene.test.cpp
src/sdl/: CMakeLists.txt  Color.ixx  Components.ixx  DrawList.ixx  Drawables.ixx  Event.ixx  Font.ixx  Input.ixx  Module.ixx  Phases.ixx  Renderer.ixx  Resources.ixx  Singletons.ixx  Transform.ixx  Window.ixx
src/sdl-ecs/: CMakeLists.txt  Color.ixx  Components.ixx  Module.ixx  Renderer.ixx
src/widget/: CMakeLists.txt  Color.ixx  Components.ixx  Control.ixx  Event.ixx  LayoutColumn.ixx  Module.ixx  Node.ixx  Node2D.ixx  NodeCircle.ixx  NodePolygon.ixx  NodeRectangle.ixx  NodeScissor.ixx  NodeText.ixx  NodeTransform.ixx  RichText.ixx  ScrollView.ixx  Scrollbar.ixx  Viewport.ixx  Widget.ixx  Window.ixx
src/widget-color/: CMakeLists.txt
src/widgets/: CMakeLists.txt  TextureCache.ixx  Widgets.ixx
src/widgets/test/: CMakeLists.txt  Widgets.test.cpp
